--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Cine XYZ</title>
+    <title>Cineflex</title>
     <link rel="stylesheet" type="text/css" href="css/estilobase.css">
 </head>
 <body>
@@ -175,5 +175,4 @@
     </footer>
 </body>
 </html>
-
 
