--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>Cineflex</title>
-    <link rel="stylesheet" type="text/css" href="css/estilobase.css">
+    <link type="text/css" rel="stylesheet" href="css/estilobase.css">
+    <link type="text/css" rel="stylesheet" href="css/movil.css" media="screen and (max-width:480px)">
+    <link type="text/css" rel="stylesheet" href="css/estilotablet.css" media="screen and (min-width:481px) and (max-width:768px)">
+    <link type="text/css" rel="stylesheet" href="css/estilobase.css" media="screen and (min-width:769px)">
 </head>
 <body>
     <header>
