youtube link changes
Se cambio los links de youtube para que se puedan ver de forma más optima.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
         <!-- Para cada película en cartelera, puedes crear un bloque de información -->
         <div class="peliculacar" id="pelicula1">
             <h3>Blue Beetle</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=-PEODBVHCgU" frameborder="0" allowfullscreen></iframe>
+            <div class="video-thumbnail">
+                <a href="https://www.youtube.com/watch?v=swtFJ2GNzhk" target="_blank">
+                <div class="play-icon">&#9658;</div> <!-- Icono de play -->
+                <img src="https://i.ytimg.com/vi/swtFJ2GNzhk/hq720.jpg" alt="Miniatura del Video">
+                </a>
+            </div>
             <div id="generos">
                 <button> Acción </button>
                 <button> Aventura </button>
@@ -77,7 +82,12 @@
         </div>
         <div class="peliculacar" id="pelicula2">
             <h3>Gran Turismo</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=3JN0efm2nHg" frameborder="0" allowfullscreen></iframe>
+            <div class="video-thumbnail">
+                <a href="https://www.youtube.com/watch?v=3JN0efm2nHg&t=1s" target="_blank">
+                <div class="play-icon">&#9658;</div> <!-- Icono de play -->
+                <img src="https://i.ytimg.com/vi/3JN0efm2nHg/hq720.jpg" alt="Miniatura del Video">
+                </a>
+            </div>
             <div id="generos">
                 <button> Deportes </button>
                 <button> Drama </button>
@@ -93,7 +103,12 @@
         </div>
         <div class="peliculacar" id="pelicula3">
             <h3>Sonido de Libertad</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=nIZM0oVl4Gw" frameborder="0" allowfullscreen></iframe>
+            <div class="video-thumbnail">
+                <a href="https://www.youtube.com/watch?v=H82uvLvszQ0" target="_blank">
+                <div class="play-icon">&#9658;</div> <!-- Icono de play -->
+                <img src="https://i.ytimg.com/vi/H82uvLvszQ0/hq720.jpg" alt="Miniatura del Video">
+                </a>
+            </div>
             <div id="generos">
                 <button> Acción </button>
             </div>
@@ -106,9 +121,14 @@
         </div>
         <div class="peliculacar" id="pelicula4">
             <h3>Megalodon 2</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=e6mJF-uDXYE" frameborder="0" allowfullscreen></iframe>
+            <div class="video-thumbnail">
+                <a href="https://www.youtube.com/watch?v=e6mJF-uDXYE&t=2s" target="_blank">
+                <div class="play-icon">&#9658;</div> <!-- Icono de play -->
+                <img src="https://i.ytimg.com/vi/e6mJF-uDXYE/hq720.jpg" alt="Miniatura del Video">
+                </a>
+            </div>
             <div id="generos">
-                <button> Terro </button>
+                <button> Terror </button>
                 <button> Ciencia Ficción </button>
             </div>
             <p>Director: Ben Wheatley</p>
