--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#proximo-estrenos" id="estrenos1">Próximos Estrenos</a></li>
             <li><a href="#promociones" id="promociones1">Promociones</a></li>
             <li><a href="#dulceria" id="dulceria1">Dulcería</a></li>
-            <li><a href="pages/login.html" id="inicio1">Iniciar sesión</a></li>
+            <!--<li><a href="pages/login.html" id="inicio1">Iniciar sesión</a></li>-->
         </ul>
     </nav>
     
