--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
                 </div>
                 <p>Director: Alejandro Monteverde</p>
                 <p>Sinopsis: La increible historia real de un ex agente del gobierno de EEUU convertido en justiciero que se embarca 
-                    en una peligrosa mision para rescatar a cientos de ninios de los traficantes sexuales.</p>
+                    en una peligrosa mision para rescatar a cientos de ninios de los traficantes sexuales.es una película dramática 
+                    estadounidense de 2023, dirigida por Alejandro Monteverde.</p>
                 <p>Elenco: Mira, Bill, Jim</p>
                 <p>Precio de Entradas: $3.00</p>
                 <p>Horarios: Lunes-Miercoles / 12:15 - 22:15 | Martes-Jueves / 13:30 - 20:30 | Sábado-Domingo / 11:00 - 23:30</p>
@@ -166,7 +167,7 @@
                 <p>Sinopsis: Un equipo de investigación inicia una misión que va a explorar las profundidades más abismales del mar
                     . Enfrentados a colosales Megalodones y a implacables saqueadores 
                     medioambientales, nuestros héroes deben correr más rápido, ser más astutos y nadar a mayor velocidad que sus despiadados 
-                    depredadores en una trepidante carrera contra el tiempo. Secuela de 'The Meg' (2018).</p>
+                    depredadores.</p>
                 <p>Elenco: Jason Statham, Sienna Guillory, Cliff Curtis</p>
                 <p>Precio de Entradas: $3.00</p>
                 <p>Horarios: Lunes-Miercoles / 11:30 - 19:30 | Martes-Jueves / 11:45 - 20:45 | Sábado-Domingo / 11:00 - 23:30</p>
@@ -219,7 +220,8 @@
                 </div>
                 <p>Director: Lee Cronin</p>
                 <p>Sinopsis: En un edificio de apartamentos de Los Ángeles, dos hermanas luchan contra los demonios sedientos 
-                    de sangre que han salido de un libro antiguo.</p>
+                    de sangre que han salido de un libro antiguo. La trama de la película sigue a dos distanciadas hermanas que
+                     tras haberse reunido se ven obligadas a confrontar a entidades demoniacas conocidas como Deadites.</p>
                 <p>Elenco: Moran Davles, Alyssa Sutherland, Lily Sullivan</p>
                 <p>Precio de Entradas: $3.00</p>
                 <p>Horarios: Lunes-Miercoles / 11:30 - 19:30 | Martes-Jueves / 11:45 - 20:45 | Sábado-Domingo / 11:00 - 23:30</p>
