--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="#cartelera" id="cartelera1">Cartelera</a></li>
             <li><a href="#proximo-estrenos" id="estrenos1">Próximos Estrenos</a></li>
             <li><a href="#promociones" id="promociones1">Promociones</a></li>
+            <li><a href="pages/login.html" id="usuarios1">Mi cuenta</a></li>
         </ul>
     </nav>
     
