--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>Cineflex</title>
-    <link type="text/css" rel="stylesheet" href="css/estilobase.css">
-    <link type="text/css" rel="stylesheet" href="css/estilomovil.css" media="screen and (max-width:480px)">
-    <link type="text/css" rel="stylesheet" href="css/estilotablet.css" media="screen and (min-width:481px) and (max-width:768px)">
-    <link type="text/css" rel="stylesheet" href="css/estilobase.css" media="screen and (min-width:769px)">
+    <link type="text/css" rel="stylesheet" href="../css/estilobase.css">
+    <link type="text/css" rel="stylesheet" href="./css/estilomovil.css" media="screen and (max-width:480px)">
+    <link type="text/css" rel="stylesheet" href="./css/estilotablet.css" media="screen and (min-width:481px) and (max-width:768px)">
+    <link type="text/css" rel="stylesheet" href="./css/estilobase.css" media="screen and (min-width:769px)">
 </head>
 <body>
     <header>
