updated another things

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     </div>
     
     <footer>
-        <p>&copy; 2023 Cineflex &rAarr; Rodrigo Aguilera and Ángel Arévalo</p>
+        <p>&copy; 2023 Cineflex</p>
     </footer>
 </body>
 </html>
