--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <p>Precio de Entradas: $3.00</p>
                 <p>Horarios: Lunes-Miercoles / 11:00 - 21:00 | Martes-Jueves / 12:00 - 19:00 | Sábado-Domingo / 10:00 - 23:00</p>
                 <div class="compra">
-                    <button class="boton-redondeado">
+                    <button  id="idBtnComprarC1" type="button" class="boton-redondeado">
                         <img src="img/icons/grocery-store.png" alt="">
                         <h4>Ver horarios disponibles</h4>
                     </button>
@@ -119,7 +119,7 @@
                 <p>Precio de Entradas: $3.00</p>
                 <p>Horarios: Lunes-Miercoles / 11:15 - 21:15 | Martes-Jueves / 12:30 - 19:30 | Sábado-Domingo / 10:00 - 23:00</p>
                 <div class="compra">
-                    <button class="boton-redondeado">
+                    <button id="idBtnComprarC2" type="button" class="boton-redondeado">
                         <img src="img/icons/grocery-store.png" alt="">
                         <h4>Ver horarios disponibles</h4>
                     </button>
@@ -145,7 +145,7 @@
                 <p>Precio de Entradas: $3.00</p>
                 <p>Horarios: Lunes-Miercoles / 12:15 - 22:15 | Martes-Jueves / 13:30 - 20:30 | Sábado-Domingo / 11:00 - 23:30</p>
                 <div class="compra">
-                    <button class="boton-redondeado">
+                    <button id="idBtnComprarC3" type="button" class="boton-redondeado">
                         <img src="img/icons/grocery-store.png" alt="">
                         <h4>Ver horarios disponibles</h4>
                     </button>
@@ -173,7 +173,7 @@
                 <p>Precio de Entradas: $3.00</p>
                 <p>Horarios: Lunes-Miercoles / 11:30 - 19:30 | Martes-Jueves / 11:45 - 20:45 | Sábado-Domingo / 11:00 - 23:30</p>
                 <div class="compra">
-                    <button class="boton-redondeado">
+                    <button id="idBtnComprarC4" type="button" class="boton-redondeado">
                         <img src="img/icons/grocery-store.png" alt="">
                         <h4>Ver horarios disponibles</h4>
                     </button>
@@ -200,7 +200,7 @@
                 <p>Precio de Entradas: $4.00</p>
                 <p>Horarios: Lunes-Miercoles / 11:30 - 19:30 | Martes-Jueves / 11:45 - 20:45 | Sábado-Domingo / 11:00 - 23:30</p>
                 <div class="compra">
-                    <button class="boton-redondeado">
+                    <button id="idBtnComprarC5" type="button" class="boton-redondeado">
                         <img src="img/icons/grocery-store.png" alt="">
                         <h4>Ver horarios disponibles</h4>
                     </button>
@@ -227,7 +227,7 @@
                 <p>Precio de Entradas: $3.00</p>
                 <p>Horarios: Lunes-Miercoles / 11:30 - 19:30 | Martes-Jueves / 11:45 - 20:45 | Sábado-Domingo / 11:00 - 23:30</p>
                 <div class="compra">
-                    <button class="boton-redondeado">
+                    <button id="idBtnComprarC6" type="button" class="boton-redondeado">
                         <img src="img/icons/grocery-store.png" alt="">
                         <h4>Ver horarios disponibles</h4>
                     </button>
@@ -298,6 +298,7 @@
     <footer>
         <p>&copy; 2023 Cineflex</p>
     </footer>
+    <script src="js/comprarBoleto.js" defer></script>
 </body>
 </html>
 
