--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>Cineflex</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/estilobase.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" 
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
@@ -270,165 +270,106 @@
     </section>
  
     <!-- Resto de tu contenido, contenido de prueba... -->
-
-    <div class="slide-container swiper" style="background-color: lavender;">
-        <h2 class="text-center">Próximos Estrenos</h2>
-        <div class="slide-content">
-            <div class="card-wrapper swiper-wrapper">
-                <div class="card swiper-slide">
-                    <div class="image-content">
-                        <span class="overlay"></span>
-
-                        <div class="card-image">
-                            <img src="img/estreno.jpg" alt="" class="card-img">
-                        </div>
+    <div class="testimonial">
+        <div class="container">
+           <div class="row">
+              <div class="col-sm-12">
+                 <div class="titlepage text_align_center">
+                    <h2 style="text-align: center;">Próximos Estrenos</h2>
+                 </div>
+              </div>
+           </div>
+           <!-- start slider section -->
+           <div class="swiper-container">
+              <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <div class="cart">
+                      <div class="image">
+                        <img src="img/estreno1.jpg" alt="Card Image">
+                      </div>
+                      <h3>Saw X</h3>
+                      <h6>Estreno</h6>
+                      <p><i class="fa-regular fa-calendar-check" style="color: #000000;"></i> Fecha de estreno: 28 sep 2023</p>
                     </div>
-
-                    <div class="card-content">
-                        <h2 class="name">David Dell</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                        <button class="button">View More</button>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="cart">
+                      <div class="image">
+                        <img src="img/estreno2.jpg" alt="Card Image">
+                      </div>
+                      <h3>The Mighty Movie</h3>
+                      <h6>Estreno</h6>
+                      <p><i class="fa-regular fa-calendar-check" style="color: #000000;"></i> Fecha de estreno: 29 sep 2023</p>
                     </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="cart">
+                      <div class="image">
+                        <img src="img/estreno3.jpg" alt="Card Image">
+                      </div>
+                      <h3>Cacería en Venecia</h3>
+                      <h6>Estreno</h6>
+                      <p><i class="fa-regular fa-calendar-check" style="color: #000000;"></i> Fecha de estreno: 14 sep 2023</p>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="cart">
+                      <div class="image">
+                        <img src="img/estreno4.jpg" alt="Card Image">
+                      </div>
+                      <h3>After para siempre</h3>
+                      <h6>Estreno</h6>
+                      <p><i class="fa-regular fa-calendar-check" style="color: #000000;"></i> Fecha de estreno: 14 sep 2023</p>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="cart">
+                      <div class="image">
+                        <img src="img/estreno5.jpg" alt="Card Image">
+                      </div>
+                      <h3>Contrarreloj</h3>
+                      <h6>Estreno</h6>
+                      <p><i class="fa-regular fa-calendar-check" style="color: #000000;"></i> Fecha de estreno: 14 sep 2023</p>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="cart">
+                      <div class="image">
+                        <img src="img/estreno6.jpg" alt="Card Image">
+                      </div>
+                      <h3>El Poder de los deseos</h3>
+                      <h6>Estreno</h6>
+                      <p><i class="fa-regular fa-calendar-check" style="color: #000000;"></i> Fecha de estreno: 23 nov 2023</p>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="cart">
+                      <div class="image">
+                        <img src="img/estreno7.jpg" alt="Card Image">
+                      </div>
+                      <h3>Willy wonka</h3>
+                      <h6>Estreno</h6>
+                      <p><i class="fa-regular fa-calendar-check" style="color: #000000;"></i> Fecha de estreno: 14 dic 2023</p>
+                    </div>
+                  </div>
                 </div>
-                <div class="card swiper-slide">
-                    <div class="image-content">
-                        <span class="overlay"></span>
-
-                        <div class="card-image">
-                            <img src="img/peliculaprox2_pptmm.jpg" alt="" class="card-img">
-                        </div>
-                    </div>
-
-                    <div class="card-content">
-                        <h2 class="name">David Dell</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                        <button class="button">View More</button>
-                    </div>
-                </div>
-                <div class="card swiper-slide">
-                    <div class="image-content">
-                        <span class="overlay"></span>
-
-                        <div class="card-image">
-                            <img src="img/peliculaprox3_cev.jpg" alt="" class="card-img">
-                        </div>
-                    </div>
-
-                    <div class="card-content">
-                        <h2 class="name">David Dell</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                        <button class="button">View More</button>
-                    </div>
-                </div>
-                <div class="card swiper-slide">
-                    <div class="image-content">
-                        <span class="overlay"></span>
-
-                        <div class="card-image">
-                            <img src="img/peliculaprox4_aps.jpg" alt="" class="card-img">
-                        </div>
-                    </div>
-
-                    <div class="card-content">
-                        <h2 class="name">David Dell</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                        <button class="button">View More</button>
-                    </div>
-                </div>
-                <div class="card swiper-slide">
-                    <div class="image-content">
-                        <span class="overlay"></span>
-
-                        <div class="card-image">
-                            <img src="img/peliculaprox5_cr.jpg" alt="" class="card-img">
-                        </div>
-                    </div>
-
-                    <div class="card-content">
-                        <h2 class="name">David Dell</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                        <button class="button">View More</button>
-                    </div>
-                </div>
-                <div class="card swiper-slide">
-                    <div class="image-content">
-                        <span class="overlay"></span>
-
-                        <div class="card-image">
-                            <!--<img src="images/profile6.jpg" alt="" class="card-img">-->
-                        </div>
-                    </div>
-
-                    <div class="card-content">
-                        <h2 class="name">David Dell</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                        <button class="button">View More</button>
-                    </div>
-                </div>
-                <div class="card swiper-slide">
-                    <div class="image-content">
-                        <span class="overlay"></span>
-
-                        <div class="card-image">
-                            <!--<img src="images/profile7.jpg" alt="" class="card-img">-->
-                        </div>
-                    </div>
-
-                    <div class="card-content">
-                        <h2 class="name">David Dell</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                        <button class="button">View More</button>
-                    </div>
-                </div>
-                <div class="card swiper-slide">
-                    <div class="image-content">
-                        <span class="overlay"></span>
-
-                        <div class="card-image">
-                            <!--<img src="images/profile8.jpg" alt="" class="card-img">-->
-                        </div>
-                    </div>
-
-                    <div class="card-content">
-                        <h2 class="name">David Dell</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                        <button class="button">View More</button>
-                    </div>
-                </div>
-                <div class="card swiper-slide">
-                    <div class="image-content">
-                        <span class="overlay"></span>
-
-                        <div class="card-image">
-                            <!--<img src="images/profile9.jpg" alt="" class="card-img">-->
-                        </div>
-                    </div>
-
-                    <div class="card-content">
-                        <h2 class="name">David Dell</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                        <button class="button">View More</button>
-                    </div>
-                </div>
+              </div>
+              <!-- If we need pagination -->
+              <div class="swiper-pagination"></div>
+          
+              <!-- If we need navigation buttons -->
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-button-next"></div>
+          
+              <!-- If we need scrollbar -->
+              <div class="swiper-scrollbar"></div>
             </div>
         </div>
-
-        <div class="swiper-button-next swiper-navBtn"></div>
-        <div class="swiper-button-prev swiper-navBtn"></div>
-        <div class="swiper-pagination"></div>
-    </div>
+     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/script.js"></script>
 </html>
