--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@
                             <p class="card-text">Sinopsis: Jaime Reyes, recién graduado de la universidad, busca encontrar su propósito en el mundo...</p>
                             <p class="card-text">Elenco: Becky, Bruna, Xolo</p>
                             <p class="card-text">Precio de Entradas: $3.00</p>
-                            <p class="card-text">Horarios: Lunes-Miércoles / 11:00 - 21:00 | Martes-Jueves / 12:00 - 19:00 | Sábado-Domingo / 10:00 - 23:00</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-custom rounded-pill"><i class="fa-solid fa-cart-shopping"></i> Ver horarios disponibles</a>
+                                <a href="#" class="btn btn-custom rounded-pill"><i class="fa-solid fa-cart-shopping"></i> Comprar boletos</a>
                             </div>
                         </div>
                     </div>
@@ -147,9 +146,8 @@
                             <p class="card-text">Sinopsis: Basada en la historia real de Jann Mardenborough, narra como se cumple el deseo mas grande de un adolescente...</p>
                             <p class="card-text">Elenco: David, Orlando, Archie</p>
                             <p class="card-text">Precio de Entradas: $3.00</p>
-                            <p class="card-text">Horarios: Lunes-Miercoles / 11:15 - 21:15 | Martes-Jueves / 12:30 - 19:30 | Sábado-Domingo / 10:00 - 23:00</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-custom rounded-pill"><i class="fa-solid fa-cart-shopping"></i> Ver horarios disponibles</a>
+                                <a href="#" class="btn btn-custom rounded-pill"><i class="fa-solid fa-cart-shopping"></i> Comprar boletos</a>
                             </div>
                         </div>
                     </div>
@@ -173,9 +171,8 @@
                             <p class="card-text">Sinopsis: La increible historia real de un ex agente del gobierno de EEUU convertido en justiciero que se embarca...</p>
                             <p class="card-text">Elenco: Mira, Bill, Jim</p>
                             <p class="card-text">Precio de Entradas: $3.00</p>
-                            <p class="card-text">Horarios: Lunes-Miercoles / 12:15 - 22:15 | Martes-Jueves / 13:30 - 20:30 | Sábado-Domingo / 11:00 - 23:30</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-custom rounded-pill"><i class="fa-solid fa-cart-shopping"></i> Ver horarios disponibles</a>
+                                <a href="#" class="btn btn-custom rounded-pill"><i class="fa-solid fa-cart-shopping"></i> Comprar boletos</a>
                             </div>
                         </div>
                     </div>
@@ -200,9 +197,8 @@
                             <p class="card-text">Sinopsis: Un equipo de investigación inicia una misión que va a explorar las profundidades más abismales del mar...</p>
                             <p class="card-text">Elenco: Jason Statham, Sienna Guillory, Cliff Curtis</p>
                             <p class="card-text">Precio de Entradas: $3.00</p>
-                            <p class="card-text">Horarios: Lunes-Miercoles / 11:30 - 19:30 | Martes-Jueves / 11:45 - 20:45 | Sábado-Domingo / 11:00 - 23:30</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-custom rounded-pill"><i class="fa-solid fa-cart-shopping"></i> Ver horarios disponibles</a>
+                                <a href="#" class="btn btn-custom rounded-pill"><i class="fa-solid fa-cart-shopping"></i> Comprar boletos</a>
                             </div>
                         </div>
                     </div>
@@ -226,9 +222,8 @@
                             <p class="card-text">Sinopsis: ¡El fenómeno cultural continúa en la pantalla grande! Sumérgete en esta experiencia cinematográfica...</p>
                             <p class="card-text">Elenco: Taylor Swift</p>
                             <p class="card-text">Precio de Entradas: $4.00</p>
-                            <p class="card-text">Horarios: Lunes-Miercoles / 11:30 - 19:30 | Martes-Jueves / 11:45 - 20:45 | Sábado-Domingo / 11:00 - 23:30</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-custom rounded-pill"><i class="fa-solid fa-cart-shopping"></i> Ver horarios disponibles</a>
+                                <a href="#" class="btn btn-custom rounded-pill"><i class="fa-solid fa-cart-shopping"></i> Comprar boletos</a>
                             </div>
                         </div>
                     </div>
@@ -253,19 +248,12 @@
                             <p class="card-text">Sinopsis: En un edificio de apartamentos de Los Ángeles, dos hermanas luchan contra los demonios sedientos de sangre...</p>
                             <p class="card-text">Elenco: Moran Davles, Alyssa Sutherland, Lily Sullivan</p>
                             <p class="card-text">Precio de Entradas: $3.00</p>
-                            <p class="card-text">Horarios: Lunes-Miercoles / 11:30 - 19:30 | Martes-Jueves / 11:45 - 20:45 | Sábado-Domingo / 11:00 - 23:30</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-custom rounded-pill"><i class="fa-solid fa-cart-shopping"></i> Ver horarios disponibles</a>
+                                <a href="#" class="btn btn-custom rounded-pill"><i class="fa-solid fa-cart-shopping"></i> Comprar boletos</a>
                             </div>
                         </div>
                     </div>
                 </div>
-
-            <div class="row">
-            </div>
-
-                <!-- Repite el bloque de información para otras películas aquí -->
-            </div>
         </div>
     </section>
  
@@ -368,6 +356,10 @@
         </div>
      </div>
 
+     <footer>
+        <p>&copy; 2023 Cineflex</p>
+    </footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
   <script src="js/script.js"></script>
