--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="#cartelera"><i class="fa-solid fa-clapperboard" style="color: #000080;"></i> Cartelera</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#proximo-estrenos"><i class="fa-solid fa-film" style="color: #000080;"></i> Próximos Estrenos</a>
+                    <a class="nav-link" href="#proximos_estrenos"><i class="fa-solid fa-film" style="color: #000080;"></i> Próximos Estrenos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#promociones"><i class="fa-solid fa-gift" style="color: #000080;"></i> Promociones</a>
@@ -258,6 +258,7 @@
     </section>
  
     <!-- Resto de tu contenido, contenido de prueba... -->
+    <section id="proximos_estrenos">
     <div class="testimonial">
         <div class="container">
            <div class="row">
@@ -343,6 +344,8 @@
                   </div>
                 </div>
               </div>
+              </div>
+            </section>
               <!-- If we need pagination -->
               <div class="swiper-pagination"></div>
           
