--- a/pages/operaciones_admin.html
+++ b/pages/operaciones_admin.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Panel de Administrador - Cine Local</title>
-    <link rel="stylesheet" type="text/css" href="">
+    <title>Panel de Administrador - Cineflex</title>
+    <link rel="stylesheet" href="../css/estilobase.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" 
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -133,8 +138,11 @@
 </main>
 
 <footer>
-    <p>&copy; 2023 Cine Local - Todos los derechos reservados</p>
+    <p>&copy; 2023 Cineflex</p>
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
