--- a/pages/login.html
+++ b/pages/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="..//css/loginbase.css">
     <title>Inicio de Sesion</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"/>
-    <script src="..//js/login.js"></script>
+
 
 </head>
 <body style="background: lavender;">
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                     <div class="input-group mb-3">
-                        <button class="btn btn-lg btn-primary w-100 fs-6" id="iniciarSesion"><a href="..//pages/dashboard.html" style="text-decoration: none; color: white;">Login</a></button>
+                        <button class="btn btn-lg btn-primary w-100 fs-6" id="iniciarSesion"><a href="../pages/dashboard.html" style="text-decoration: none; color: white;">Login</a></button>
                     </div>
                     <div class="input-group mb-3">
                         <button class="btn btn-lg btn-light w-100 fs-6"><img src="..//img/icons/search.png" style="width: 20px;" class="me-2"><small>Iniciar sesion con Google</small></button>
